--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
+    "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
@@ -14,6 +15,6 @@
   },
   "type": "module",
   "scripts": {
-  "start": "node server/index.js"
+    "start": "node server/index.js"
   }
 }
